Proyecto de aplicacion gifs usando Angular

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6f40c124-a9f7-4b1a-9626-71b667089955"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
